# blog-rs

./: Cargo.toml  README.md  schema.sql
content/: 2023-06-10.md
src/assets/: post.css
src/lib/: lib.rs
src/lib/domain/: mod.rs
src/lib/routes/: index.rs  mod.rs  post.rs
templates/: base.html  index.html  posts.html
