[package]
name = "blog-rs"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "blog-rs"
path = "src/bin/main.rs"

[[bin]]
name = "markd"
path = "src/bin/markd.rs"

[lib]
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = [ "markdown" ] }
axum = "0.6.18"
shuttle-axum = "0.18.0"
shuttle-runtime = "0.18.0"
shuttle-shared-db = { version = "0.18.0", features = [ "postgres"] }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "postgres", "macros", "time" ] }
tokio = "1.28.2"
tower-http = { version = "0.4", features = [ "full" ] }
tracing = "0.1.37"
